syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "profile.proto";

service WalletService {
    rpc GetWalletBalance(GetWalletBalanceRequest) returns (GetWalletBalanceResponse) {
        option(google.api.http) = {
			get: "/api/wallet/{org_id}/balance"
		};
    }

    rpc GetVmxcTxHistory(GetVmxcTxHistoryRequest) returns (GetVmxcTxHistoryResponse){
        option(google.api.http) = {
			get: "/api/wallet/{org_id}/tx-history"
		};
    }

    rpc GetWalletUsageHist(GetWalletUsageHistRequest) returns (GetWalletUsageHistResponse) {
        option(google.api.http) = {
    		get: "/api/wallet/{org_id}/usage-history"
    	};
    }
}

message GetWalletBalanceRequest {
    int64 org_id = 1;
}

message GetWalletBalanceResponse {
    double balance = 1;
    ProfileResponse user_profile = 2;
}

message GetVmxcTxHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message VmxcTxHistory {
    string from = 1;
    string to = 2;
    string tx_type = 3;
    double amount = 4;
    string created_at = 5;
}

message GetVmxcTxHistoryResponse {
    int64 count = 1;
    repeated VmxcTxHistory tx_history = 2;
    ProfileResponse user_profile = 3;
}

message GetWalletUsageHistRequest {
    int64 org_id = 1;
}

message GetWalletUsageHist {
    string StartTime = 1;
    string Duration = 2;
    int64 CountUplinkPktsDv = 3;
    int64 CountDownlinkPktsDv = 4;
    int64 CountUplinkPktsGw = 5;
    int64 CountDownlinkPktsGw = 6;
    double Cost = 7;
    double Income = 8;
    double TotalPayment = 9;
}

message GetWalletUsageHistResponse {
    repeated GetWalletUsageHist wallet_usage_his = 1;
    ProfileResponse user_profile = 2;
}